  kilobytes
- Updated Transact-SQL mode (Ollie Rutherfurd)

+ Bug Fixes

- Fixed a memory leak with the search and replace dialog box
- Undo would be broken after a file was reloaded
- Fixed exception thrown if a buffer contained definitions for integer
  properties (tab size, maximum line length, ...)
- Changing the gutter font didn't update the gutter width
- Fixed broken scrolling behavior

* Version 4.0pre1

+ New Features

- New document model uses less memory, loads files faster, and has a
  simpler API for developers. Also, finally, the file modification flag
  is cleared when all edits up to a save are undone
- New folding features:
  - Three fold modes: none, indent, explicit. 'none' is the default now.
    'indent' is the indent-based folding mode, that behaves the same as
    indent-based folding in jEdit 3.1 and 3.2. 'explicit' parses the
    buffer for {{{ and }}} and adds folds based on that.
  - Change the fold mode by clicking the fold mode widget in the status
    bar, or in the Buffer Options dialog box, or with the 'folding'
    buffer-local property, or in the Global Options dialog box.
  - Folds are now shown in the gutter as triangles, which is more
    intuitive than filled/not-filled boxes
  - View->Folding->Collapse All Folds command, equivalent to invoking
    'Expand Folds With Level' and specifying a level of 1
  - Different text areas editing the same buffer can now have different
    folds collapsed and expanded. Previously, fold visibility was stored
    at the buffer level
- Utilities->Memory Status command to replace 'Show Free Memory' macro
- General look and feel settings moved to 'Appearance' option pane
- If you are using the Metal or Kunststoff L&F, the UI control font can
  be changed in Utilities->Global Options->Appearance
- 'Vertical Paste' macro (Andre Kaplan)
- File listings in the file system browser are now colorized. Change the
  colors in Utilities->Global Options->File System Browser